[gd_scene load_steps=4 format=3 uid="uid://dkck7ebjm7nfi"]

[ext_resource type="Script" path="res://Scripts/ice_cube.gd" id="1_p6kdh"]
[ext_resource type="Texture2D" uid="uid://drp28q6lypscu" path="res://Assets/Art/ice.png" id="2_the66"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1t08"]
size = Vector2(33, 30)

[node name="IceCube" type="Node2D"]
script = ExtResource("1_p6kdh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, -5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_the66")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_w1t08")

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
